<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Ultimate Trivia</string>
    <string name="out_of_text">Question: 45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="placeholder">Hello world this is where we are going to add the actual text to be shown</string>
    <string name="prev_button">Prev</string>
    <string name="text_formatted">Question: %d/%d</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_asnwer">Incorrect!</string>
    <string name="score_text">Current Score: %d</string>
    <string name="button_save">Save</string>
    <string name="high_score">High Score: %d</string>
</resources>