<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2B0D17"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/myTitle"
            style="@style/MainTextStyle"
            android:layout_marginTop="16dp"
            android:text="@string/title_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_out_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_formatted"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myTitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="372dp"
            android:layout_height="182dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#320B0B"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_out_of">

            <TextView
                android:id="@+id/question_textview"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/question_text_padding"
                android:text="@string/placeholder"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_true"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#320B0B"
            android:text="@string/true_button"
            android:textColor="#CF0F0F"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <Button
            android:id="@+id/button_false"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#320B0B"
            android:text="@string/false_button"
            android:textColor="#CF0F0F"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true" />

        <Button
            android:id="@+id/button_next"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#320B0B"
            android:text="@string/next_button"
            android:textColor="#CF0F0F"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false" />

        <Button
            android:id="@+id/button_prev"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#320B0B"
            android:text="@string/prev_button"
            android:textColor="#CF0F0F"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toStartOf="@+id/button_next"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false" />

        <TextView
            android:id="@+id/score_textview"
            style="@style/score_style"
            android:layout_width="142dp"
            android:layout_height="25dp"
            android:text="@string/score_text"
            android:textColor="#CF0F0F"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/card_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toEndOf="@+id/text_view_out_of"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.718" />

        <Button
            android:id="@+id/button_save"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:backgroundTint="#320B0B"
            android:text="@string/button_save"
            android:textColor="#CF0F0F"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.086"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_prev"
            app:layout_constraintVertical_bias="0.404" />

        <TextView
            android:id="@+id/high_score_textview"
            style="@style/score_style"
            android:layout_width="142dp"
            android:layout_height="25dp"
            android:text="@string/high_score"
            android:textColor="#CF0F0F"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/score_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_out_of"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>